--- a/index.html
+++ b/index.html
@@ -29,25 +29,29 @@
     </nav>
     <div class="hero"></div>
     <div class="content">
-        <div id="Aout-Me" class="About-Me">
-            <!--<img src="./assets/images/search-engine-optimization.jpg" alt="" class="float-left" /> -->
+        <div id="About-Me" class="About-Me">
+            <!--<img src="./assets/images/" alt="" class="float-left" /> -->
             <h2>About Me</h2>
+            <div class="About-Me-Info">
             <p>
                 In August of 2018 I graduated from The University of Alabama.
                 Goining to a Alabama made Football and important part of the year for me, but 
                 during the off season when i have free time I use my time to embrace nature by 
                 skiing, hiking, camping, or any other activity I can find.
             </p>
+            </div>
         </div>
-        <div id="WWork" class="Work">
+        <div id="Work" class="Work">
             <h2>Work</h2>
 
         </div>
         <div id="Contact-Me" class="Contact-Me">
             <h2>Contact Me</h2>
-            <p>
-                (904)-325-5305      NSMALL94@GMAIL.COM      https://github.com/Nsmall94        https://www.linkedin.com/in/nicholas-small-965571a2/ 
-            </p>
+            <div class="contact-Me-Info">
+                <p>
+                    (904)-325-5305 --- NSMALL94@GMAIL.COM ---  https://github.com/Nsmall94 ---    https://www.linkedin.com/in/nicholas-small-965571a2/ 
+                </p>
+            </div>
         </div>
     </div>
 </body>
