--- a/index.html
+++ b/index.html
@@ -43,11 +43,25 @@
         </div>
         <div id="Work" class="Work">
             <h2>Work</h2>
+            <div class="work-projects">
+                <h2>
+                    place holder
+                </h2>
+                <h2>
+                    place holder
+                </h2>
+                <h2>
+                    place holder
+                </h2>
+                <h2>
+                    place holder
+                </h2>
+            </div>
 
         </div>
         <div id="Contact-Me" class="Contact-Me">
             <h2>Contact Me</h2>
-            <div class="contact-Me-Info">
+            <div class="contact-Me-Fax">
                 <p>
                     (904)-325-5305 --- NSMALL94@GMAIL.COM ---  https://github.com/Nsmall94 ---    https://www.linkedin.com/in/nicholas-small-965571a2/ 
                 </p>
