--- a/index.html
+++ b/index.html
@@ -45,17 +45,9 @@
             <h2>Work</h2>
             <div class="work-projects">
                 <h2>
-                    place holder
+                    <a href="https://nsmall94.github.io/Horiseon/">Horiseon</a>
                 </h2>
-                <h2>
-                    place holder
-                </h2>
-                <h2>
-                    place holder
-                </h2>
-                <h2>
-                    place holder
-                </h2>
+                
             </div>
 
         </div>
