--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
             <h2>Work</h2>
             <div class="work-projects">
                 <h2>
-                    <a href="https://nsmall94.github.io/Horiseon/">Horiseon</a>
+                    <img sarc="./assets/images/screenshot_h" style="width:128px;height:128px;">
+                    <a link href="https://nsmall94.github.io/Horiseon/">Horiseon</a>
+                </h2>
+                <h2>
+                    <img sarc="./assets/images/Screenshot_mt" style="width:128px;height:128px;">
+                    <a link href="https://nsmall94.github.io/Media-Therapy/">Media Therapy</a>
                 </h2>
                 
             </div>
