--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                     <img sarc="./assets/images/Screenshot_mt" style="width:128px;height:128px;">
                     <a link href="https://nsmall94.github.io/Media-Therapy/">Media Therapy</a>
                 </h2>
+                <h2>
+                    <img sarc="./assets/images/Screenshot-project" style="width:128px;height:128px;">
+                    <a link href="https://never-walk-alone.herokuapp.com/">Never Walk Alone</a>
+                </h2>
                 
             </div>
 
