--- a/index.html
+++ b/index.html
@@ -45,16 +45,20 @@
             <h2>Work</h2>
             <div class="work-projects">
                 <h2>
-                    <img sarc="./assets/images/screenshot_h" style="width:128px;height:128px;">
+                    <img sarc="./assets/images/screenshot_h.png" style="width:128px;height:128px;">
                     <a link href="https://nsmall94.github.io/Horiseon/">Horiseon</a>
                 </h2>
                 <h2>
-                    <img sarc="./assets/images/Screenshot_mt" style="width:128px;height:128px;">
+                    <img sarc="./assets/images/Screenshot_mt.png" style="width:128px;height:128px;">
                     <a link href="https://nsmall94.github.io/Media-Therapy/">Media Therapy</a>
                 </h2>
                 <h2>
-                    <img sarc="./assets/images/Screenshot-project" style="width:128px;height:128px;">
+                    <img sarc="./assets/images/Screenshot-project.png" style="width:128px;height:128px;">
                     <a link href="https://never-walk-alone.herokuapp.com/">Never Walk Alone</a>
+                </h2>
+                <h2>
+                    <img sarc="./assets/images/finalproject.png" style="width:128px;height:128px;">
+                    <a link href="https://tool-rental-bootcamp.herokuapp.com/">Rent-A-Tool</a>
                 </h2>
                 
             </div>
