--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </h2>
                 <h2>
                     <img sarc="./assets/images/finalproject.png" style="width:128px;height:128px;">
-                    <a link href="https://tool-rental-bootcamp.herokuapp.com/">Rent-A-Tool</a>
+                    <a link href="https://rent-a-tool.herokuapp.com/">Rent-A-Tool</a>
                 </h2>
                 
             </div>
